<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:id="@+id/option_main">
    <LinearLayout 
        style="@style/option_layout_style"
        android:background="@drawable/state_btn_pressed"
        android:layout_weight="1"
        android:id="@+id/btn_0">
        <ImageView 
            style="@style/option_img_style"
            android:src="@drawable/readme"/>
        <TextView 
            style="@style/option_txt_style"
            android:text="@string/about"/>
    </LinearLayout>
    <LinearLayout 
        style="@style/option_layout_style"
        android:background="@drawable/state_btn_pressed"
        android:layout_weight="1"
        android:id="@+id/btn_1">
        <ImageView 
            style="@style/option_img_style"
            android:src="@drawable/share"/>
        <TextView 
            style="@style/option_txt_style"
            android:text="@string/share"/>
    </LinearLayout>
    <LinearLayout 
        style="@style/option_layout_style"
        android:background="@drawable/state_btn_pressed"
        android:layout_weight="1"
        android:id="@+id/btn_2">
        <ImageView 
            style="@style/option_img_style"
            android:src="@drawable/advice"/>
        <TextView 
            style="@style/option_txt_style"
            android:text="@string/advice"/>
    </LinearLayout>
    <LinearLayout 
        style="@style/option_layout_style"
        android:background="@drawable/state_btn_pressed"
        android:layout_weight="1"
        android:id="@+id/btn_3">
        <ImageView 
            style="@style/option_img_style"
            android:src="@drawable/exit"/>
        <TextView 
            style="@style/option_txt_style"
            android:text="@string/exit"/>
    </LinearLayout>

</LinearLayout>
