<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/about_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:src="@drawable/about" />

    <TextView
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/context_tv"
        android:text="" />

    <ImageView
        android:id="@+id/context_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_img"
        android:layout_centerHorizontal="true"
        android:src="@drawable/about_context" />

    <TextView
        android:id="@+id/introduce_tv"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/context_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:textSize="16sp"
        android:text="@string/introduce" 
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/context_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:text="@string/copyright" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/introduce_tv"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/qq" 
        android:textSize="16sp"
        android:autoLink="all"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/email"
        android:autoLink="email"
        android:textSize="16sp" />

</RelativeLayout>