<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circle="http://schemas.android.com/apk/res/com.lzy.loungercontrol.start"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lc_background"
    tools:context=".MainActivity" 
    android:id="@+id/main">

    <!-- 这是操作菜单布局文件 -->

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="80dp"
            android:src="@drawable/top_logo" />

        <Button
            android:id="@+id/option_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="14dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/option" />

    </RelativeLayout>
    
    <Button
        android:id="@+id/btnConn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/connect_pc" />
    <RelativeLayout 
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_centerHorizontal="true" >
        
       
        

    </RelativeLayout>

    <com.lzy.circlemenu.view.CircleLayout
        android:id="@+id/main_circle_layout"
        android:layout_width="fill_parent"
        android:layout_height="340dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnConn"
        android:layout_marginTop="17dp"
        circle:firstChildPosition="South"
        circle:isRotating="true"
        circle:rotateToCenter="true" >

        <com.lzy.circlemenu.view.CircleImageView
            android:id="@+id/main_facebook_image"
            circle:name="@string/ppt"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ppt" />

        <com.lzy.circlemenu.view.CircleImageView
            android:id="@+id/main_myspace_image"
            circle:name="@string/file_explorer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/file_explorer" />

        <com.lzy.circlemenu.view.CircleImageView
            android:id="@+id/main_google_image"
            circle:name="@string/joystick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/joystick" />

        <com.lzy.circlemenu.view.CircleImageView
            android:id="@+id/main_linkedin_image"
            circle:name="@string/keyboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/keyboard" />

        <com.lzy.circlemenu.view.CircleImageView
            android:id="@+id/main_twitter_image"
            circle:name="@string/mouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mouse" />

        <com.lzy.circlemenu.view.CircleImageView
            android:id="@+id/main_wordpress_image"
            circle:name="@string/visual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/visual" />
    </com.lzy.circlemenu.view.CircleLayout>
    
    <TextView
        android:id="@+id/main_selected_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/main_circle_layout"
        android:visibility="visible"
        android:textColor="#fe7c00"
        android:textAppearance="?android:attr/textAppearance" />
        <!-- android:layout_alignParentStart="true" -->

</RelativeLayout>
