<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/conn_background"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="22dp"
        android:layout_marginTop="43dp"
        android:layout_toLeftOf="@+id/singal_iv"
        android:src="@drawable/mobile" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/singal_iv"
        android:src="@drawable/computer" />

    <ImageView
        android:id="@+id/view1"
        android:layout_below="@id/imageView2"
        style="@style/item_scroll_split_line2"/>
    

    <ImageButton
        android:id="@+id/connect_btn"
        android:layout_width="208dp"
        android:layout_height="42dp"
        android:layout_below="@+id/port_et"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/conn"
        android:src="@drawable/conn_start" />

    <ImageView
        android:id="@+id/singal_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ip_et"
        android:layout_centerHorizontal="true"
        android:src="@drawable/signal_loading" />

    <EditText
        android:id="@+id/ip_et"
        android:layout_below="@+id/view1"
        android:layout_marginTop="52dp"
        android:layout_centerInParent="true"
        android:ems="20"
        android:hint="@string/input_ip"
        android:inputType="textUri"
        style="@style/my_edittext_style"/>

    <EditText
        android:id="@+id/port_et"
        android:layout_alignLeft="@+id/ip_et"
        android:layout_below="@+id/ip_et"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/input_port"
        android:inputType="number"
        style="@style/my_edittext_style"/>

    <TextView
        android:id="@+id/port_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/port_et"
        android:layout_alignBottom="@+id/port_et"
        android:layout_marginLeft="12dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="端   口：" />

    <TextView
        android:id="@+id/ip_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ip_et"
        android:layout_alignBottom="@+id/ip_et"
        android:layout_marginLeft="12dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="IP地址：" />



</RelativeLayout>